--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@ionic/angular": "^4.1.0",
     "@types/socket.io-client": "^1.4.32",
     "core-js": "^2.5.4",
+    "google-libphonenumber": "^3.2.2",
     "jquery": "^3.4.0",
     "ngx-mat-select-search": "^1.7.2",
     "redux": "^4.0.1",
+    "remove": "^0.1.5",
     "rxjs": "~6.3.3",
     "socket.io-client": "^2.2.0",
     "zone.js": "~0.8.29"
