--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/device": "^5.5.1",
+    "@ionic-native/google-plus": "^5.5.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
@@ -32,6 +33,9 @@
     "babylonjs": "^4.0.3",
     "cordova-android": "8.0.0",
     "cordova-browser": "6.0.0",
+    "cordova-ios": "5.0.1",
+    "cordova-plugin-googleplus": "git+https://github.com/EddyVerbruggen/cordova-plugin-googleplus.git",
+    "cordova-plugin-ionic-webview": "4.0.1",
     "core-js": "^2.5.4",
     "google-libphonenumber": "^3.2.2",
     "hammerjs": "^2.0.8",
@@ -61,7 +65,6 @@
     "codelyzer": "~4.5.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^4.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -84,12 +87,19 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "818015353741-bclulu5of2i3205hoq93c39tvnjvic1t.apps.googleusercontent.com",
+        "WEB_APPLICATION_CLIENT_ID": "818015353741-m97ohmk6tpqf067gcgff0kb3i6t4k8go.apps.googleusercontent.com"
+      },
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      }
     },
     "platforms": [
       "browser",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
